--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,19 @@ body {
     font-family: 'Roboto', sans-serif;
     color: #2E2F42;
 }
+
+.nav-link:active {
+    color: #404BBF;
+}
+
+.address-link {
+    color: #434455;
+}
+
+.address-link:hover {
+    color: #404BBF;
+}
+
+.address-link:focus {
+    color: #404BBF;
+}
